--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<button onclick="hello()">Click for Hello</button>
 
+
+<script src="script.js"></script>
 </body>
 </html>
