Random number button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<button onclick="generateNumber()">Get random number</button>
+<h4 id="text"></h4>
+<script src="script.js"></script>
 </body>
 </html>
